2007-06-07  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd-config.tcl:
	* sample-config.tcl.in: Updated config parameters
	debug into logdebug

2007-06-04  Stephen Deasey  <sdeasey@users.sf.net>

	* include/nsthread.h:
	* nsthread/thread.c:
	* nsthread/pthread.c:
	* nsthread/winthread.c:
	* nsthread/tls.c:
	* nsthread/cslock.c:
	* nsthread/nsthreadtest.c:
	* nsd/tclthread.c:
	* nsd/log.c:
	* nsd/tclinit.c: Convert Ns_ThreadId() to return a uintptr_t, that is,
	an integral type which is as long as a pointer, so that it can
	accurately hold an opaque pthread_t whether it is implemented as an
	integer type, a pointer, and on 32/64 bit machines. This fixes many
	pointer/integer of different size warnings.

	Log messages now print the thread ID in hex, for brevity.

	NB: depending on the architecture of your machine, the ABI may have
	changed and require a recompile.

	* nsthread/signal.c: Include pthread.h for definition of
	pthread_sigmask() on FreeBSD.

	* nsd/binder.c:
	* nsd/cls.c:
	* nsd/conn.c:
	* nsd/limits.c:
	* nsd/listen.c:
	* nsd/returnresp.c:
	* nsd/sched.c:
	* nsd/sls.c:
	* nsd/sockcallback.c:
	* nsd/tclfile.c:
	* nsd/tclobjv.c:
	* nsd/tclsock.c:
	* nsdb/dbinit.c:
	* nsperm/nsperm.c:
	* nsproxy/nsproxylib.c: Add a lot of ugly casting when passing int's
	through void pointer storage (mainly Tcl hash tables) to prevent
	compiler warnings when an int and a pointer are not the same size.

2007-06-02  Stephen Deasey  <sdeasey@users.sf.net>

	* tests/ns_nsv.test: Match using globbing to handle different Tcl
	version error messages.

	* nsd/adpparse.c: Remove redundant code which reads an uninitialised
	variable.

2007-05-25  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/server.c:
	* tcl/config.tcl: Move ADP and Tcl page mapping, with existing
	semantics, from C to Tcl.

	* include/ns.h:
	* nsd/config.c: Add Ns_ConfigFlags() to simplify setting flag options.

	* nsd/nsd.h:
	* nsd/server.c: Cleanup ADP config parsing with Ns_ConfigFlags(). Remove