@@ -2761,8 +2761,10 @@ WriterThread(void *arg)
 static void
 SockWriterRelease(WriterSock *wrSockPtr, int reason, int err)
 {
-    Ns_Log(Notice, "Writer: closed sock=%d, fd=%d, error=%d/%d, sent=%llu, flags=%X",
-           wrSockPtr->sockPtr->sock, wrSockPtr->fd, reason, err, wrSockPtr->nsent, wrSockPtr->flags);
+    Ns_Log(Notice, "Writer: closed sock=%d, fd=%d, error=%d/%d, "
+           "sent=%" TCL_LL_MODIFIER "d, flags=%X",
+           wrSockPtr->sockPtr->sock, wrSockPtr->fd, reason, err,
+           wrSockPtr->nsent, wrSockPtr->flags);
     SockRelease(wrSockPtr->sockPtr, reason, err);
     if (wrSockPtr->fd > -1) {
         close(wrSockPtr->fd);
@@ -2853,8 +2855,10 @@ NsWriterQueue(Ns_Conn *conn, Tcl_WideInt nsend, Tcl_Channel chan, FILE *fp, int 
     wrPtr->curPtr = wrPtr->curPtr->nextPtr;
     Ns_MutexUnlock(&wrPtr->lock);
 
-    Ns_Log(Notice, "Writer: %d: started sock=%d, fd=%d: size=%llu, flags=%X: %s",
-           queuePtr->id, wrSockPtr->sockPtr->sock, wrSockPtr->fd, nsend, wrSockPtr->flags, connPtr->reqPtr->request->url);
+    Ns_Log(Notice, "Writer: %d: started sock=%d, fd=%d: "
+           "size=%" TCL_LL_MODIFIER "d, flags=%X: %s",
+           queuePtr->id, wrSockPtr->sockPtr->sock, wrSockPtr->fd,
+           nsend, wrSockPtr->flags, connPtr->reqPtr->request->url);
 
     /*
      * Now add new writer socket to the writer thread's queue
@@ -3012,7 +3016,9 @@ NsTclWriterObjCmd(ClientData arg, Tcl_Interp *interp, int objc,
                 Ns_MutexLock(&queuePtr->lock);
                 wrSockPtr = queuePtr->curPtr;
                 while (wrSockPtr != NULL) {
-                    Ns_DStringPrintf(&ds, "%s %s %d %llu %llu ", drvPtr->name,
+                    Ns_DStringPrintf(&ds, "%s %s %d "
+                                     "%" TCL_LL_MODIFIER "d %" TCL_LL_MODIFIER "d ",
+                                     drvPtr->name,
                                      ns_inet_ntoa(wrSockPtr->sockPtr->sa.sin_addr),
                                      wrSockPtr->fd, wrSockPtr->size, wrSockPtr->nsent);
                     wrSockPtr = wrSockPtr->nextPtr;
